2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (abort): Add declaration.

2008-05-31  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_slot_ensure_full): Update use of storage_check_reserve
	to be consistent with new API.
	(as_insert): Likewise.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* as.c [! RM_INTERN]: Include <hurd/storage.h>.
	(as_slot_ensure_full) [! RM_INTERN]: Call storage_check_reserve.
	(as_insert) [! RM_INTERN]: Likewise.
	
2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.
	Create symbolic link to package's library in `sysroot/lib/'.
	* Makefile.am [ENABLE_TESTS]: Don't build package's program and
	library.

	* viengoos.c (parse_args): Use `strtol' instead of `atoi'.

	* object.h: Include <hurd/error.h> instead of <error.h>.

	* cap-lookup.c: Unconditionally use `S_PUTCHAR' and `S_PRINTF' instead
	of `s_putchar' and `s_printf' and remove the latters' prototypes.

	* Makefile.am: Rework system of build flags for the test programs.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* as.c: Include <hurd/exceptions.h>.
	(ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE - PAGESIZE
	bytes large.  Write to each page.
	* cap-lookup.c: Include <hurd/exceptions.h>.
	(ensure_stack): Change SPACE to be EXCEPTION_STACK_SIZE - PAGESIZE
	bytes large.  Write to each page.

	* zalloc.c (ZONE_SIZE): Add suffix the 1 with a U type qualifier.
	(ZONES): Include one less zone.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_find_soft): Also claim the object if
	ODESC->EVICTION_CANDIDATE is true.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): Correctly parenthesize the use of <<.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* pager.c (pager_collect): Don't just consider the first-level
	activities, walk the activity hierarchy to find the victim.

2008-05-28  Neal H. Walfield  <neal@gnu.org>
